docs: added docs for useTimeout hook

--- a/docs/pages/useToggle.mdx
+++ b/docs/pages/useToggle.mdx
@@ -2,7 +2,7 @@
 
 This hook allows you to manage toggle state in a functional component. It returns an array containing the current state of the toggle, a callback function to toggle the state and a callback function to set the state directly.
 
-Parameters
+Props
 
 `initialValue`: The initial state of the toggle.
 
