docs: updated intro

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -4,8 +4,8 @@ title: Home - @thepuskar/custom-hooks
 
 # Introduction
 
-Welcome to @thepuskar/custom-hooks documentation, a collection of different useful and reusable React Custom hooks⚛
+Welcome to the @thepuskar/custom-hooks documentation, featuring a diverse set of powerful and reusable custom hooks for React projects, all written in TypeScript for enhanced type-safety and ease of development.
 
 ## What is @thePuskar/custom-hooks?
 
-A collection **simple**, **powerful** and **reusable** react custom hooks written in Typescript to speed up your components and hooks development written in Typescript to speed up your components and hooks development .
+@thepuskar/custom-hooks is a collection of custom hooks for use in React projects. These hooks provide useful and reusable functionality, to help speed up and simplify the development of your React components and hooks. They are written in TypeScript, which provides type-safety and compatibility with other parts of your application. This package can help you easily add powerful functionality to your React projects while keeping your code clean and maintainable.
